--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -16,11 +16,22 @@
 }
 
 .nav-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   margin: 0;
 
   font-family: 'Lobster', cursive;
   font-weight: 400;
   font-size: 36px;
+}
+
+.nav-title-logo {
+  height: 60px;
+  width: 60px;
+
+  margin-right: 30px;
 }
 
 .nav-options {
