--- a/src/index.scss
+++ b/src/index.scss
@@ -29,5 +29,13 @@ a.no-style {
 ul.no-style {
   margin: 0;
   
+  margin-block-start: 0;
+  margin-block-end: 0;
+  
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  
+  padding-inline-start: 0;
+
   list-style-type: none;
 }
