Reviews: Add majority of reviews sections

--- a/src/index.scss
+++ b/src/index.scss
@@ -39,3 +39,13 @@ ul.no-style {
 
   list-style-type: none;
 }
+
+button.no-style {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
