--- a/src/components/Review.scss
+++ b/src/components/Review.scss
@@ -2,12 +2,54 @@
 .review {
   position: relative;
 
+  height: fit-content;
   max-width: 430px;
   padding: 30px;
+
+  margin-top: 50px;
 
   border-radius: 4px;
 
   background: #FFFFFF;
 
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+
+  &:first-of-type {
+    margin-top: 0px;
+  }
+}
+
+.review-content {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+
+  .icon {
+    font-size: 14px;
+    min-width: 50px;
+
+    &:last-of-type {
+      align-self: flex-end;
+    }
+  }
+}
+
+.review-upper {
+  display: flex;
+  align-items: center;
+
+  margin-bottom: 24px;
+}
+
+.review-author {
+  margin-left: 16px;
+
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.review-stars {
+  color: #FCD117;
+
+  font-size: 24px;
 }
