--- a/src/components/ReviewsGrid.scss
+++ b/src/components/ReviewsGrid.scss
@@ -1,6 +1,22 @@
 
 .reviews-grid {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   margin-left: 100px;
   margin-right: 100px;
   margin-bottom: 50px;
+}
+
+.reviews-wrapper {
+  display: flex;
+  justify-content: space-between;
+
+  width: 100%;
+}
+
+.reviews-container.right {
+  margin-top: 50px;
 }
