--- a/src/components/RowButton.scss
+++ b/src/components/RowButton.scss
@@ -16,26 +16,24 @@
 }
 
 .row-button-button {
-  display: flex;
-  align-items: flex-end;
+  &, &.no-style {
+    display: flex;
+    align-items: flex-end;
 
-  margin: 0;
-  padding: 20px;
+    margin: 0;
+    padding: 20px;
 
-  background: #56AD62;
+    background: #56AD62;
 
-	border: none;
-  border-radius: 10px;
-	
-	font: inherit;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 24px;
+    border: none;
+    border-radius: 10px;
+    
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 24px;
 
-	cursor: pointer;
-	outline: inherit;
+    color: #FFFFFF;
 
-  color: #FFFFFF;
-
-  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+  }
 }
