--- a/src/components/pages/Home.scss
+++ b/src/components/pages/Home.scss
@@ -11,6 +11,8 @@
   background-image: url('https://cleanlineslawncare.s3.us-east-1.amazonaws.com/image000001.jpg');
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .home-header-overlay {
@@ -24,4 +26,68 @@
   font-weight: 700;
 
   text-align: center;
+}
+
+.overview {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin-bottom: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+
+  background: #FFFFFF;
+
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+
+  border-radius: 4px;
+}
+
+.overview-item {
+  flex: 0 0 calc(50% - 50px);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  height: 320px;
+
+  padding: 25px;
+
+  &:nth-child(odd) {
+    background: #EFEFEF;
+  }
+
+  &.serving {
+    background-image: url('https://cleanlineslawncare.s3.us-east-1.amazonaws.com/Screenshot_20210807-001456%20%281%29.png');
+    background-position: center;
+    background-size: cover;
+
+    border-top-left-radius: 4px;
+  }
+
+  &.quality {
+    background-image: url('https://cleanlineslawncare.s3.us-east-1.amazonaws.com/oldimages/Mowing.jpg');
+    background-position: center;
+    background-size: cover;
+  }
+
+  &.full-service {
+    background-image: url('https://cleanlineslawncare.s3.us-east-1.amazonaws.com/image000000.jpg');
+    background-position: center;
+    background-size: cover;
+
+    border-bottom-left-radius: 4px;
+  }
+}
+
+.overview-item-title {
+  font-size: 36px;
+  font-weight: 700;
+
+  margin-bottom: 36px;
+}
+
+.overview-item-content {
+  font-size: 24px;
 }
