--- a/src/components/RowButton.scss
+++ b/src/components/RowButton.scss
@@ -13,6 +13,11 @@
   background: #60C26D;
 
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+
+  &.noBG {
+    background: none;
+    box-shadow: none;
+  }
 }
 
 .row-button-button {
