--- a/src/components/Logo.scss
+++ b/src/components/Logo.scss
@@ -1,5 +1,5 @@
 
-.logo {
+.logo.no-style {
   display: flex;
   align-items: center;
 
@@ -17,4 +17,17 @@
   width: 60px;
 
   margin-right: 30px;
+}
+
+.logo.no-style.big {
+  display: flex;
+  flex-direction: column;
+
+  font-size: 48px;
+
+  .logo-img {
+    width: 50vw;
+    max-width: 250px;
+    height: auto;
+  }
 }
