Add proper message states to reviews

--- a/src/index.scss
+++ b/src/index.scss
@@ -37,6 +37,13 @@ textarea {
   height: 100px;
 }
 
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
 a.no-style {
   &, &:link, &:visited {
     text-decoration: inherit;
