--- a/src/components/MessageBox.scss
+++ b/src/components/MessageBox.scss
@@ -4,9 +4,7 @@
   justify-content: center;
   align-items: center;
 
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-bottom: 50px;
+  margin: 50px 100px;
 
   text-align: center;
 }
