--- a/src/components/forms/Form.scss
+++ b/src/components/forms/Form.scss
@@ -5,7 +5,7 @@
   align-items: center;
   flex-direction: column;
 
-  margin-bottom: 50px;
+  margin: 50px 0;
 
   .input-wrapper {
     display: flex;
@@ -36,5 +36,10 @@
     input, textarea {
       width: 100%;
     }
+  }
+
+
+  .form-title {
+    text-align: center;
   }
 }
