--- a/src/components/ServicesGrid.scss
+++ b/src/components/ServicesGrid.scss
@@ -5,7 +5,12 @@ ul.services-grid {
   justify-content: center;
   align-items: center;
 
+  background: #FFFFFF;
+
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+
+  border-radius: 4px;
+  overflow: hidden;
 
   &, &.no-style {
     margin-bottom: 50px;
