--- a/src/components/ServicesGridItem.scss
+++ b/src/components/ServicesGridItem.scss
@@ -6,6 +6,7 @@
   height: 230px;
 
   background-size: cover;
+  background-position: center;
 
   font-size: 48px;
   font-weight: 700;
@@ -20,6 +21,7 @@
   align-items: flex-end;
 
   padding-bottom: 6px;
+  padding-left: 10px;
 
   background: rgba(0, 0, 0, 0.19);
 
