--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,5 +1,7 @@
 
 .nav {
+  position: relative;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -48,6 +50,63 @@
 
       &.selected {
         background: #5CBB69;
+      }
+    }
+  }
+}
+
+.nav-mobile.no-style {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border: 1px solid #58B464;
+  background: #5CBB69;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+@media (max-width: 1100px) {
+  .nav-title {
+    width: 245px;
+  }
+}
+
+@media (max-width: 955px) {
+  .nav {
+    padding: 0 25px;
+  }
+
+  .nav-options {
+    display: none;
+
+    &.open {
+      display: block;
+      position: absolute;
+      right: 0;
+      left: 50px;
+      top: calc(100% - 1px);
+
+      background: #60C26D;
+    }
+
+    li {
+      width: 100%;
+  
+      border-bottom: 1px solid #58B464;  
+  
+      &:last-of-type {
+        border-bottom: none;
+      }
+  
+      a {
+        width: unset;
+        height: 80px;
+        line-height: 80px;
+
+        &.selected {
+          background: #5CBB69;
+        }
       }
     }
   }
