--- a/src/components/forms/EstimateForm.scss
+++ b/src/components/forms/EstimateForm.scss
@@ -7,3 +7,21 @@
     flex: 0 0 33.33%;
   }
 }
+
+@media (max-width: 700px) {
+  .service-list {
+    li {
+      flex: 0 0 50%;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .service-list {
+    li {
+      flex: 0 0 100%;
+
+      text-align: center;
+    }
+  }
+}
