--- a/src/components/ContactInfo.scss
+++ b/src/components/ContactInfo.scss
@@ -22,3 +22,10 @@
     color: #4267B2;
   }
 }
+
+@media (max-width: 550px) {
+  .contact-row {
+    flex-direction: column;
+    align-items: center;
+  }
+}
