--- a/src/components/Logo.scss
+++ b/src/components/Logo.scss
@@ -31,3 +31,16 @@
     height: auto;
   }
 }
+
+@media (max-width: 955px) {
+  .logo.no-style {
+    width: 160px;
+    font-size: 24px;
+  }
+
+  .logo-img {
+    height: 40px;
+    width: 40px;
+    margin-right: 15px;
+  }
+}
