--- a/src/components/RowButton.scss
+++ b/src/components/RowButton.scss
@@ -42,3 +42,19 @@
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   }
 }
+
+@media (max-width: 955px) {
+  .row-button-button {
+    &, &.no-style {
+      font-size: 18px;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .row-button-button {
+    &, &.no-style {
+      font-size: 14px;
+    }
+  }
+}
