--- a/src/components/ServicesGrid.scss
+++ b/src/components/ServicesGrid.scss
@@ -18,3 +18,12 @@ ul.services-grid {
     margin-right: 100px;
   }
 }
+
+@media (max-width: 955px) {
+  ul.services-grid {
+    &, &.no-style {
+      margin-left: 25px;
+      margin-right: 25px;
+    }
+  }
+}
