--- a/src/components/pages/FourOhFour.scss
+++ b/src/components/pages/FourOhFour.scss
@@ -5,7 +5,6 @@
   text-align: center;
 
   .icon {
-    
     font-size: 144px;
   }
 }
@@ -18,4 +17,38 @@
   background: #FFFFFF;
 
   border-radius: 4px;
+}
+
+@media (max-width: 955px) {
+  .page-four-oh-four {
+    margin: 25px;
+
+    .icon {
+      font-size: 72px;
+    }
+
+    .title {
+      font-size: 24px;
+    }
+
+    .message {
+      font-size: 18px;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .page-four-oh-four {
+    .icon {
+      font-size: 36px;
+    }
+
+    .title {
+      font-size: 18px;
+    }
+
+    .message {
+      font-size: 14px;
+    }
+  }
 }
