--- a/src/components/pages/Home.scss
+++ b/src/components/pages/Home.scss
@@ -91,3 +91,47 @@
 .overview-item-content {
   font-size: 24px;
 }
+
+@media (max-width: 1200px) {
+  .home-header-overlay {
+    padding: 30px 25px;
+  }
+}
+
+@media (max-width: 955px) {
+  .home-header-overlay {
+    font-size: 24px;
+  }
+
+  .overview {
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-bottom: 25px;
+  }
+
+  .overview-item-title {
+    font-size: 24px;
+  }
+  
+  .overview-item-content {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 400px) {
+  .overview-item {
+    flex: 0 0 calc(100% - 50px);
+
+    &.serving {
+      display: none;
+    }
+  
+    &.quality {
+      display: none;
+    }
+  
+    &.full-service {
+      display: none;
+    }
+  }
+}
