--- a/src/components/RowButton.scss
+++ b/src/components/RowButton.scss
@@ -23,7 +23,7 @@
 .row-button-button {
   &, &.no-style {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
 
     margin: 0;
     padding: 20px;
