--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -56,7 +56,7 @@
 }
 
 .nav-mobile.no-style {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 
@@ -65,6 +65,7 @@
   padding: 10px;
   border-radius: 4px;
 }
+
 
 @media (max-width: 1100px) {
   .nav-title {
@@ -75,6 +76,10 @@
 @media (max-width: 955px) {
   .nav {
     padding: 0 25px;
+  }
+  
+  .nav-mobile.no-style {
+    display: flex;
   }
 
   .nav-options {
