--- a/src/components/Review.scss
+++ b/src/components/Review.scss
@@ -56,9 +56,16 @@
   font-size: 24px;
 }
 
+@media (max-width: 955px) {
+  .review {
+    margin-top: 25px;
+  }
+}
+
 @media (max-width: 500px) {
   .review-upper {
     flex-direction: column-reverse;
+    margin-bottom: 0px;
   }
   .review-author {
     margin-left: 0px;
