--- a/src/components/ReviewsGrid.scss
+++ b/src/components/ReviewsGrid.scss
@@ -28,6 +28,12 @@
   }
 }
 
+@media (max-width: 955px) {
+  .reviews-container.right {
+    margin-top: 25px;
+  }
+}
+
 @media (max-width: 750px) {
   .reviews-wrapper {
     flex-direction: column;
