--- a/src/components/pages/Home.scss
+++ b/src/components/pages/Home.scss
@@ -9,7 +9,6 @@
   width: 100%;
 
   background-image: url('https://cleanlineslawncare.s3.us-east-1.amazonaws.com/image000001.jpg');
-  background-position: center;
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -99,6 +98,10 @@
 }
 
 @media (max-width: 955px) {
+  .home-header {
+    height: 300px;
+  }
+
   .home-header-overlay {
     font-size: 24px;
   }
