Shrink margins at 500px

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -72,5 +72,12 @@
 }
 
 @media (max-width: 500px) {
+  .footer-container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 
+  .footer-side.links {
+    padding-top: 20px;
+  }
 }
