--- a/src/components/Review.scss
+++ b/src/components/Review.scss
@@ -63,6 +63,15 @@
 }
 
 @media (max-width: 500px) {
+  .review {
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .review-upper {
     flex-direction: column-reverse;
     margin-bottom: 0px;
