--- a/src/components/ServicesGrid.scss
+++ b/src/components/ServicesGrid.scss
@@ -22,8 +22,19 @@ ul.services-grid {
 @media (max-width: 955px) {
   ul.services-grid {
     &, &.no-style {
+      margin-bottom: 25px;
       margin-left: 25px;
       margin-right: 25px;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  ul.services-grid {
+    &, &.no-style {
+      margin-bottom: 10px;
+      margin-left: 10px;
+      margin-right: 10px;
     }
   }
 }
